force-app/main/default/objects/Asset/Asset.object-meta.xml
<CustomObject>
    <!--    <compactLayoutAssignment>Risk_Compact</compactLayoutAssignment>
-->
    <!---->
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>