force-app/main/default/objects/Asset/fields/Absolute_Nett_Retention__c.field-meta.xml
<CustomField>
    <fullName>Absolute_Nett_Retention__c</fullName>
    <label>Absolute Nett Retention</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>