force-app/main/default/objects/Asset/fields/Accumulation__c.field-meta.xml
<CustomField>
    <fullName>Accumulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accumulation</label>
    <referenceTo>Accumulation__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>