force-app/main/default/objects/Asset/fields/Accumulation_ID__c.field-meta.xml
<CustomField>
    <fullName>Accumulation_ID__c</fullName>
    <label>Accumulation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>