force-app/main/default/objects/Asset/fields/Address_of_Obligee__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Obligee__c</fullName>
    <label>Address of Obligee</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>