force-app/main/default/objects/Asset/fields/Amount_IDR__c.field-meta.xml
<CustomField>
    <fullName>Amount_IDR__c</fullName>
    <label>Amount IDR(not used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>