force-app/main/default/objects/Asset/fields/Amount_IDR_new__c.field-meta.xml
<CustomField>
    <fullName>Amount_IDR_new__c</fullName>
    <formula>Amount__c *  Exchange_Rate__c</formula>
    <label>Amount IDR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>