force-app/main/default/objects/Asset/fields/Amount_Insured__c.field-meta.xml
<CustomField>
    <fullName>Amount_Insured__c</fullName>
    <description>amount dari risk</description>
    <label>Amount Insured</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>