force-app/main/default/objects/Asset/fields/Amount_PT__c.field-meta.xml
<CustomField>
    <fullName>Amount_PT__c</fullName>
    <description>Amount for Perlengkapan Tambahan Value</description>
    <label>Amount PT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>