force-app/main/default/objects/Asset/fields/Authorized_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Person_Name__c</fullName>
    <label>Authorized Person - Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>