force-app/main/default/objects/Asset/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>