force-app/main/default/objects/Asset/fields/BPPDAN__c.field-meta.xml
<CustomField>
    <fullName>BPPDAN__c</fullName>
    <label>BPPDAN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>