force-app/main/default/objects/Asset/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>For COB 411</description>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>3Sixty</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Alex Moulton</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Alton</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Atlantis</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Avand</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Aviator</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Birdy</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Brompton</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Camp</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Cannondale</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Cube</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Dahon</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Dominate</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Element</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Exotic</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Fnhon</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>FoldX</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Fuji</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Genio</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Giant</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>GT Bike</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Kona</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Lankeleisi</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Lapierre</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>London Taxi</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Marin</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Odessy</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Pacific</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Patrol</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Pinarello</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>