force-app/main/default/objects/Asset/fields/Builder_Yard_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Yard_Name__c</fullName>
    <label>Builder Yard Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>