force-app/main/default/objects/Asset/fields/Busreq_ID__c.field-meta.xml
<CustomField>
    <fullName>Busreq_ID__c</fullName>
    <formula>Opportunity__r.Busreq_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busreq ID</label>
    <type>Text</type>
</CustomField>