force-app/main/default/objects/Asset/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <label>Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>