force-app/main/default/objects/Asset/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Asset Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Category)</relationshipLabel>
    <relationshipName>Risks3</relationshipName>
    <type>Lookup</type>
</CustomField>