force-app/main/default/objects/Asset/fields/certificate_cur_id__c.field-meta.xml
<CustomField>
    <fullName>certificate_cur_id__c</fullName>
    <label>certificate cur id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>