force-app/main/default/objects/Asset/fields/certificate_endorsement_type__c.field-meta.xml
<CustomField>
    <fullName>certificate_endorsement_type__c</fullName>
    <label>certificate endorsement type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>