force-app/main/default/objects/Asset/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City/Regency</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Assets (City)</relationshipLabel>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>