force-app/main/default/objects/Asset/fields/City_From__c.field-meta.xml
<CustomField>
    <fullName>City_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City (From)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Risks (City (From))</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>