force-app/main/default/objects/Asset/fields/City_To__c.field-meta.xml
<CustomField>
    <fullName>City_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City (To)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Risks (City (To))</relationshipLabel>
    <relationshipName>Risks3</relationshipName>
    <type>Lookup</type>
</CustomField>