force-app/main/default/objects/Asset/fields/Class_Category__c.field-meta.xml
<CustomField>
    <fullName>Class_Category__c</fullName>
    <description>utk cob 901</description>
    <label>Class Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>