force-app/main/default/objects/Asset/fields/Classification_2__c.field-meta.xml
<CustomField>
    <fullName>Classification_2__c</fullName>
    <label>Classification 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>SINGLE</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>DUAL</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>NON</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>