force-app/main/default/objects/Asset/fields/COB__c.field-meta.xml
<CustomField>
    <fullName>COB__c</fullName>
    <formula>Text(Opportunity__r.COB__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COB</label>
    <type>Text</type>
</CustomField>