force-app/main/default/objects/Asset/fields/Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Value__c</fullName>
    <label>Collateral Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>