force-app/main/default/objects/Asset/fields/Commission_All_Coverages__c.field-meta.xml
<CustomField>
    <fullName>Commission_All_Coverages__c</fullName>
    <label>Commission All Coverages</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>