force-app/main/default/objects/Asset/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <formula>Entry_Party_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person</label>
    <type>Text</type>
</CustomField>