force-app/main/default/objects/Asset/fields/Contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contractor Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risks (Contractor Name)</relationshipLabel>
    <relationshipName>Risks1</relationshipName>
    <type>Lookup</type>
</CustomField>