force-app/main/default/objects/Asset/fields/Coordinate__c.field-meta.xml
<CustomField>
    <fullName>Coordinate__c</fullName>
    <label>Coordinate</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>