force-app/main/default/objects/Asset/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage</label>
    <referenceTo>InsurancePolicyCoverage</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>