force-app/main/default/objects/Asset/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Jika diisi berarti dari Coverage create master data melalui matrix</description>
    <label>Coverage Name</label>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Coverage Name)</relationshipLabel>
    <relationshipName>Risks5</relationshipName>
    <type>Lookup</type>
</CustomField>