force-app/main/default/objects/Asset/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Data__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Exchange Rate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Data__c</referenceTo>
    <relationshipLabel>Risks (Currency)</relationshipLabel>
    <relationshipName>Risks1</relationshipName>
    <type>Lookup</type>
</CustomField>