force-app/main/default/objects/Asset/fields/CUSTOM_BOND_Amount__c.field-meta.xml
<CustomField>
    <fullName>CUSTOM_BOND_Amount__c</fullName>
    <label>CUSTOM BOND Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>