force-app/main/default/objects/Asset/fields/Declaration_Description__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Description__c</fullName>
    <label>Declaration Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>