force-app/main/default/objects/Asset/fields/Declaration_Option__c.field-meta.xml
<CustomField>
    <fullName>Declaration_Option__c</fullName>
    <label>Declaration Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>On Every Shipment</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>