force-app/main/default/objects/Asset/fields/Declare_Value__c.field-meta.xml
<CustomField>
    <fullName>Declare_Value__c</fullName>
    <label>Declare Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>