force-app/main/default/objects/Asset/fields/Detail_Description__c.field-meta.xml
<CustomField>
    <fullName>Detail_Description__c</fullName>
    <label>Detail Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>