force-app/main/default/objects/Asset/fields/Detail_Description_Un_Named__c.field-meta.xml
<CustomField>
    <fullName>Detail_Description_Un_Named__c</fullName>
    <label>Detail Description - Un-Named</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>