force-app/main/default/objects/Asset/fields/DO_Doc_Date__c.field-meta.xml
<CustomField>
    <fullName>DO_Doc_Date__c</fullName>
    <label>DO Doc Date</label>
    <type>Date</type>
</CustomField>