force-app/main/default/objects/Asset/fields/DO_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>DO_Doc_Number__c</fullName>
    <label>DO Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>