force-app/main/default/objects/Asset/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIB</fullName>
            </value>
            <value>
                <fullName>PIT</fullName>
            </value>
            <value>
                <fullName>SPKPBM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>