force-app/main/default/objects/Asset/fields/driver_name__c.field-meta.xml
<CustomField>
    <fullName>driver_name__c</fullName>
    <label>driver name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>