force-app/main/default/objects/Asset/fields/endorsement_certificate__c.field-meta.xml
<CustomField>
    <fullName>endorsement_certificate__c</fullName>
    <label>endorsement certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>