force-app/main/default/objects/Asset/fields/Engine_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity__c</fullName>
    <formula>Model__r.ENGINE_CAPACITY__c</formula>
    <label>Engine Capacity (CC)</label>
    <type>Text</type>
</CustomField>