force-app/main/default/objects/Asset/fields/Engine_Capacity_CC__c.field-meta.xml
<CustomField>
    <fullName>Engine_Capacity_CC__c</fullName>
    <label>Engine Capacity (CC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>