force-app/main/default/objects/Asset/fields/Entry_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Entry_Party_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entry Party Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>