force-app/main/default/objects/Asset/fields/Entry_Party_Type__c.field-meta.xml
<CustomField>
    <fullName>Entry_Party_Type__c</fullName>
    <description>FKA Party Involved Type in Lintas</description>
    <label>Entry Party Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Principal</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Main Contractor</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Sub Contractor</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Manufacturer</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Supervising</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Proposer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>