force-app/main/default/objects/Asset/fields/Eq_Zone__c.field-meta.xml
<CustomField>
    <fullName>Eq_Zone__c</fullName>
    <label>Earthquake Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>