force-app/main/default/objects/Asset/fields/Estimate_Annual_Shipment__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Annual_Shipment__c</fullName>
    <label>Estimate Annual Shipment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>