force-app/main/default/objects/Asset/fields/Excess_Treaty__c.field-meta.xml
<CustomField>
    <fullName>Excess_Treaty__c</fullName>
    <label>Excess Treaty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>