force-app/main/default/objects/Asset/fields/Exposure__c.field-meta.xml
<CustomField>
    <fullName>Exposure__c</fullName>
    <label>Exposure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prefer Decline</fullName>
            </value>
            <value>
                <fullName>Beware</fullName>
            </value>
            <value>
                <fullName>Consider to Cover</fullName>
            </value>
            <value>
                <fullName>Appetite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>