force-app/main/default/objects/Asset/fields/Facultative_Folder__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facultative Folder</label>
    <referenceTo>Facultative_Share__c</referenceTo>
    <relationshipLabel>Risks</relationshipLabel>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>