force-app/main/default/objects/Asset/fields/Facultative_Owner__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facultative Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Risks</relationshipName>
    <type>Lookup</type>
</CustomField>