force-app/main/default/objects/Asset/fields/First_Loss_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Loss_Amount__c</fullName>
    <label>First Loss Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>