force-app/main/default/objects/Asset/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>Vessel_Name__r.VESSELFLAG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>