force-app/main/default/objects/Asset/fields/Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>Flood_Zone__c</fullName>
    <label>Flood Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>