force-app/main/default/objects/Asset/fields/From_Place_of_Dispatch__c.field-meta.xml
<CustomField>
    <fullName>From_Place_of_Dispatch__c</fullName>
    <label>From / Place of Dispatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>