force-app/main/default/objects/Asset/fields/Gross_Retention_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Retention_Amount__c</fullName>
    <label>Gross Retention Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>