force-app/main/default/objects/Asset/fields/Group_Package__c.field-meta.xml
<CustomField>
    <fullName>Group_Package__c</fullName>
    <label>Group Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Duo</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>