force-app/main/default/objects/Asset/fields/Has_Facultative__c.field-meta.xml
<CustomField>
    <fullName>Has_Facultative__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Facultative?</label>
    <type>Checkbox</type>
</CustomField>