force-app/main/default/objects/Asset/fields/Hole__c.field-meta.xml
<CustomField>
    <fullName>Hole__c</fullName>
    <label>Hole</label>
    <length>3</length>
    <type>Text</type>
</CustomField>