force-app/main/default/objects/Asset/fields/Imaginary_Profit__c.field-meta.xml
<CustomField>
    <fullName>Imaginary_Profit__c</fullName>
    <label>Imaginary Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>